src/objects/Ticket__c.object
<CustomObject>
    <fields>
        <fullName>Assigned_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Ticket_Reference__c</fullName>
        <label>Client Ticket Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Connection</label>
        <referenceTo>Connection__c</referenceTo>
        <relationshipLabel>Requests</relationshipLabel>
        <relationshipName>Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Customer__c</referenceTo>
        <relationshipName>Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deliverable__c</fullName>
        <label>Deliverable</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Due_Date_Prioritized__c</fullName>
        <formula>IF( ISPICKVAL( Priority__c ,&apos;Critical&apos;) ,  TODAY() +1, IF( ISPICKVAL( Priority__c ,&apos;Serious&apos;),  TODAY() +2,IF( ISPICKVAL( Priority__c ,&apos;Important&apos;), TODAY() +3, TODAY() +4)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Date Prioritized</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <inlineHelpText>If Due Date is changed,Reason for Due Date change should be entered.</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Content__c</fullName>
        <label>Email Content</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Issue_Sub_Type__c</fullName>
        <label>Issue Sub Type</label>
        <picklist>
            <picklistValues>
                <fullName>Val1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Val2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Val3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Issue_Type__c</fullName>
        <label>Issue Type</label>
        <picklist>
            <picklistValues>
                <fullName>Problem - Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Request</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Change Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complaints or Comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>No_Of_Hours__c</fullName>
        <label>No Of Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Ticket__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Ticket</label>
        <referenceTo>Ticket__c</referenceTo>
        <relationshipName>Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Critical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Serious</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Important</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schedule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipName>Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason_for_Due_Date_Change__c</fullName>
        <label>Reason for Due Date Change</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Assessing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investigating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recovering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escalated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplied_Email__c</fullName>
        <label>Supplied Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Supplied_Name__c</fullName>
        <label>Supplied Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ticket_Category__c</fullName>
        <label>Ticket Category</label>
        <picklist>
            <picklistValues>
                <fullName>Block Hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ad-Hoc   </fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ticket_Number__c</fullName>
        <displayFormat>TN-{0000}</displayFormat>
        <label>Ticket Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Enhancement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Problem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incident</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mandatory</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>Ticket ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requests</pluralLabel>
    <recordTypes>
        <fullName>Child_Ticket</fullName>
        <active>true</active>
        <label>Child Ticket</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Reason_for_Due_Date_Change</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ISCHANGED( Due_Date__c ), ISBLANK( Reason_for_Due_Date_Change__c ) , false)</errorConditionFormula>
        <errorDisplayField>Reason_for_Due_Date_Change__c</errorDisplayField>
        <errorMessage>Reason for Due Date Change cannot be Empty</errorMessage>
    </validationRules>
</CustomObject>